Fixed some "bugs" pointed out by FindBugs.